@@ -5,7 +5,11 @@ control-2.3.51   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
 ===============================================================================
 
 ** filt, filtdata
-   -- Added function to specify disrete-time transfer functions in DSP format.
+   -- Added function "filt" to specify disrete-time transfer functions in DSP
+      format.
+   -- Added function "filtdata" to return any type of discrete-time LTI model
+      in DSP format.
+
 
 ===============================================================================
 control-2.3.50   Release Date: 2012-03-06   Release Manager: Lukas Reichlin
